--- a/W16_Lab10.md
+++ b/W16_Lab10.md
@@ -2,3 +2,5 @@
 
 * Issue: [Center the map](https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/1) (250 pts)
 * Issue: [Fix Ghost AI](https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/2) (400 pts)
+* Issue: [Pacman Ghost Collision](https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/3) (200 pts)
+* Issue: [No way to win](https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/4) (150 pts)
