--- a/M16_lab02.md
+++ b/M16_lab02.md
@@ -1,1 +1,21 @@
 Cole R., Kevin C.
+
+#A
+The project is an Android application that runs a Pacman game on mobile devices
+#B
+
+#C
+
+#D
+
+#E
+
+#F
+
+#G
+
+#H
+
+#I
+
+#J
