--- a/M16_lab02.md
+++ b/M16_lab02.md
@@ -5,17 +5,30 @@ The project is an Android application that runs a Pacman game on mobile devices
 #B
 
 #C
-
+After installing the Android Studio IDE and downloading the correct SDK updates the application was able to be launched and played. You can play the game and collect the pellets in order to get a high score but if you are touched by the ghost no action will happen to you and you will be allowed to play an endless game. The user can pause the game by long pressing anywhere on the screen.
 #D
 
 #E
-
+The current Readme provides a brief discription of the project and the authors of the game. There is a section about how to run the current code using android studio on either an emulator or on an android device. The previous students provide the current features of the game as well as the implemented and remaining User Stories. Lastly they provide a final remarks section where they explain areas to improve and possible features to implement in the game as well as a project history. The README.md could include a section on what is dangerous to touch in the code. This way, future developers will get a sense of what lurks behind every code adjustment and may help prevent relationship conflicts.
 #F
-
+Since this is an android project there is not an included build.xml file because this project runs through Android Studio. A similiar file exists tilted AndroidManifest.xml which is in the app/src/main/ directory.
 #G
+##The current issues along with the point values:
+Add more levels - 200 per level 
+Add a Settings page - 200 
+Indication of winning a level - 200 
+Pacman and Ghost collision - 150 
+Fix Ghost AI - 400 
+Center game map - 250
 
+Total with 1 level added - 1400
+
+For the most part the issues are clear in what they expect. The Fix Ghost AI issue is by far the most challenging issue and that would be the one that could use a little clarity on what exactly need to be implemented.
 #H
-
+[Add mute/un-mute button](https://github.com/colerogers/cs56-android-games-pacman/issues/3)
+[Re-work/add pause button](https://github.com/colerogers/cs56-android-games-pacman/issues/2)
+[DrawingView class refactor](https://github.com/colerogers/cs56-android-games-pacman/issues/1)
+[Test cases](https://github.com/colerogers/cs56-android-games-pacman/issues/4)
 #I
 
 #J
