--- a/M16_lab02.md
+++ b/M16_lab02.md
@@ -13,7 +13,7 @@ The current Readme provides a brief discription of the project and the authors o
 #F
 Since this is an android project there is not an included build.xml file because this project runs through Android Studio. A similiar file exists tilted AndroidManifest.xml which is in the app/src/main/ directory.
 #G
-##The current issues along with the point values:
+####The current issues along with the point values:
 Add more levels - 200 per level 
 Add a Settings page - 200 
 Indication of winning a level - 200 
@@ -25,6 +25,7 @@ Total with 1 level added - 1400
 
 For the most part the issues are clear in what they expect. The Fix Ghost AI issue is by far the most challenging issue and that would be the one that could use a little clarity on what exactly need to be implemented.
 #H
+####Added Issues:
 [Add mute/un-mute button](https://github.com/colerogers/cs56-android-games-pacman/issues/3)
 
 [Re-work/add pause button](https://github.com/colerogers/cs56-android-games-pacman/issues/2)
