--- a/M16_lab02.md
+++ b/M16_lab02.md
@@ -5,43 +5,44 @@ Kevin Chan - GitHub: kevinchanucsb
 The project is an Android application that runs a Pacman game on mobile devices
 #B
 
-    As a user, I can see the introduction screen when I open the app so that I can know it has sucessfully opened. (100pts)
-    As a user, I can see a play button and a help button and a high score button so that I can click on them. (50pts)
-    As a user, I can click on the help button so that I can know how to play. (50pts)
-    As a user, I can click on the play button so that I can start the actual game. (50pts)
-    As a user, I can see the game board so that I know the game is about to start. (150pts)
-    As a user, I can see my character on the gameboard so that I know where I start. (50pts)
-    As a user, I can move my character so that I see myself move across the game board. (250pts)
-        The character should animate. (50 pts)
-        The character should be able to move up down, left and right.(25 pts)
-        The character should move based on user input (swipe gestures). (75 pts)
-        The character stops moving when it reaches a wall. (100 pts)
-    As a user, I can see the pellets on the board so I know where to move. (50pts)
-    As a user, I can see my score to see how well I've played. (50pts)
-    As a user, I can move my character to eat pellets so that I can get points. (150pts)
-        The pellet should dissapear when the character moves over it. (100 pts)
-        The score should increase when the pellets get eaten. (50 pts)
-    As a user, I can pause the game so that I can continue later on. (50pts)
-    As a user, I can unpause/resume the game so that I can continue where I left off. (50pts)
-    As a user, I can see enemy ghosts on the board so that I know where they spawn. (50pts)
-    As a user, I can see enemy ghosts move so that I know where NOT to move. (250pts)
-        The ghosts should animate. (50 pts)
-        The ghosts should move according to unique personalities/behaviors. (200 pts)
-            Ghost AI Movement
-    As a user, I can keep track of my highest score so I can strive to beat it. (50pts)
-    As a user, I can hear Pacman background music so I can get HYPED. (150pts)
-        The music shoud start when the user opens the app. (25 pts)
-        The music should stop when the app is not in focus. (50 pts)
-        The music should be shared across all screens so there is no overlap. (75 pts)
-    As a user, I can see a mute button so that I have the ability to mute the music. (50pts)
-    As a user, I can click on the mute button to mute the music. (100 pts)
-    As a user, I can set different difficulties so that I can make it easier or harder for myself. (200pts)
-    As a user, I can change the colors of the game so I can set things to my color preference. (100pts)
+    1.As a user, I can see the introduction screen when I open the app so that I can know it has sucessfully opened.
+    2.As a user, I can see a play button and a help button and a high score button so that I can click on them. 
+    3.As a user, I can click on the help button so that I can know how to play. 
+    4.As a user, I can click on the play button so that I can start the actual game. 
+    5.As a user, I can see the game board so that I know the game is about to start. 
+    6.As a user, I can see my character on the gameboard so that I know where I start. 
+    7.As a user, I can move my character so that I see myself move across the game board. 
+        The character should animate.
+        The character should be able to move up down, left and right.
+        The character should move based on user input (swipe gestures). 
+        The character stops moving when it reaches a wall. 
+    8.As a user, I can see the pellets on the board so I know where to move.
+    9.As a user, I can see my score to see how well I've played.
+    10.As a user, I can move my character to eat pellets so that I can get points.
+        The pellet should dissapear when the character moves over it.
+        The score should increase when the pellets get eaten.
+    11.As a user, I can pause the game so that I can continue later on.
+    12.As a user, I can unpause/resume the game so that I can continue where I left off.
+    13.As a user, I can see enemy ghosts on the board so that I know where they spawn.
+    14.As a user, I can see enemy ghosts move so that I know where NOT to move.
+        The ghosts should animate.
+        
+    15.As a user, I can keep track of my highest score so I can strive to beat it.
+    16.As a user, I can hear Pacman background music so I can get HYPED.
+        The music shoud start when the user opens the app.
+        The music should stop when the app is not in focus.
+        The music should be shared across all screens so there is no overlap.
+    
 
 #C
 After installing the Android Studio IDE and downloading the correct SDK updates the application was able to be launched and played. You can play the game and collect the pellets in order to get a high score but if you are touched by the ghost no action will happen to you and you will be allowed to play an endless game. The user can pause the game by long pressing anywhere on the screen.
 #D
-
+1. The ghosts should move according to unique personalities/behaviors.
+            Ghost AI Movement
+2. As a user, I can see a mute button so that I have the ability to mute the music.
+3. As a user, I can click on the mute button to mute the music
+4. As a user, I can set different difficulties so that I can make it easier or harder for myself. 
+5. As a user, I can change the colors of the game so I can set things to my color preference. 
 #E
 The current Readme provides a brief discription of the project and the authors of the game. There is a section about how to run the current code using android studio on either an emulator or on an android device. The previous students provide the current features of the game as well as the implemented and remaining User Stories. Lastly they provide a final remarks section where they explain areas to improve and possible features to implement in the game as well as a project history. The README.md could include a section on what is dangerous to touch in the code. This way, future developers will get a sense of what lurks behind every code adjustment and may help prevent relationship conflicts.
 #F
