Started an Info section
How the current code is interpreted

--- a/M16_lab02.md
+++ b/M16_lab02.md
@@ -74,3 +74,19 @@ For the most part the issues are clear in what they expect. The Fix Ghost AI iss
 Most of the current code is seperated into classes that serve one purpose and are name accordingly. There is a class called DrawingView that needs to be refactored because most of the game is inside that class. DrawingView could be seperated into many different subclasses such as a Pacman class which contains multiple subclasses for movement and character actions. The same could be said about the Ghost character and how it deserves a seperate class and its own subclasses. There could also be classes that handle the scoring of the game and the transition into a new level if that feature is ever implemented.
 #J
 The current code does not make use of Test cases written by the previous students. Test cases could be used to test different features of the code especially after a refractor of the DrawingView class. Some examples could be testing if the game resets to the title screen after a player is touched by a ghost, testing to see if the pause option successfully saves the current state of the game, and testing to check if the high score text changes after a player surpases a previous high score.
+
+
+#Info on how to interpret the current code
+###The game was originally a tutorial from [ZETCODE](http://zetcode.com/tutorials/javagamestutorial/pacman/)
+The leveldata[] array has certian numbers associated with the objects drawn on the screen.
+
+The numbers that correspond to each wall are as follows:
+1->Left
+2->Top
+4->Right
+8->Bottom
+
+The number 16 corresponds to a point(pellet) on the map
+The number 0 means there is nothing at that point(inside of a walled off area)
+
+For example the bottom right corner of the map has a value of 28 because there is a bottom wall(8), a right wall(4), and a pellet(16) with the total value(8+4+16) of 28.
