--- a/M16_lab02.md
+++ b/M16_lab02.md
@@ -81,12 +81,40 @@ The current code does not make use of Test cases written by the previous student
 The leveldata[] array has certian numbers associated with the objects drawn on the screen.
 
 The numbers that correspond to each wall are as follows:
+
 1->Left
+
 2->Top
+
 4->Right
+
 8->Bottom
 
+
 The number 16 corresponds to a point(pellet) on the map
-The number 0 means there is nothing at that point(inside of a walled off area)
+
+The number 0 means there is nothing at that point which could be an inside of a walled off area
+
 
 For example the bottom right corner of the map has a value of 28 because there is a bottom wall(8), a right wall(4), and a pellet(16) with the total value(8+4+16) of 28.
+
+
+###For testing purposes this double demensional array will build the map with one pellet directly to the right of Pacman
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+            {3, 10, 10, 2, 10, 10, 10, 6, 0,3, 10,10,10,2,10,10, 6},
+            {5, 0, 0, 5, 0, 0, 0, 5, 0, 5, 0, 0, 0, 5, 0, 0, 5},
+            {1,10,10, 0,10,2,10, 8,10, 8,10,2,10, 0,10,10, 4},
+            {9,10,10, 4, 0, 9,10, 6, 0,3,10, 12, 0, 1,10,10, 12},
+            {0, 0, 0, 5, 0, 0, 0, 5, 0, 5, 0, 0, 0, 5, 0, 0, 0},
+            {0, 0, 0, 5, 0,3,10, 8,10, 8,10, 6, 0, 5, 0, 0, 0},
+            {10,10,10, 0,10, 4, 0, 0, 0, 0, 0, 1,10, 0,10,10,10},
+            {0, 0, 0, 5, 0, 1,10,10,10,10,10, 4, 0, 5, 0, 0, 0},
+            {0, 0, 0, 5, 0, 5, 0, 0, 0, 0, 0, 5, 0, 5, 0, 0, 0},
+            {3,10,10, 0,10, 8,10, 6, 0,3,10, 8,10, 0,10,10, 6},
+            {5, 0, 0, 5, 0, 0, 0, 5, 0, 5, 0, 0, 0, 5, 0, 0, 5},
+            {9, 6, 0, 5, 0, 0, 0, 1, 2, 20, 0, 0, 0, 5, 0,3, 12}, //Pacman spawn at 2 and pellet at 20
+            {0, 5, 0, 1,10,10,2, 8, 8, 8,2,10,10, 4, 0, 5, 0},
+            {3, 8,10, 12, 0, 0, 9,2,10,2, 12, 0, 0, 9, 10, 8, 6},
+            {5, 0, 0, 0, 0, 0, 0, 5, 0, 5, 0, 0, 0, 0, 0, 0, 5},
+            {9,10,10,10,10,10,10, 8,10, 8,10,10,10,10,10,10, 12}
