Fixed winning game issue and added a class for level generation as well as added comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     </string>
     <string name="settingsLabel">Settings</string>
     <string name="resumeLabel">Resume</string>
+    <string name="wonGame">YOU WON!</string>
+    <string name="keepPlaying">Press NEW GAME to play again</string>
 </resources>
