--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="resumeLabel">Resume</string>
     <string name="wonGame">YOU WON!</string>
     <string name="keepPlaying">Press NEW GAME to play again</string>
+    <string name="settingsTitle"> SETTINGS</string>
+    <string name="settingsMusic"> Music </string>
 </resources>
