--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="wonGame">YOU WON!</string>
     <string name="keepPlaying">Press NEW GAME to play again</string>
     <string name="settingsTitle"> SETTINGS</string>
-    <string name="settingsMusic"> Music </string>
+    <string name="musicToggle">Toggle Music</string>
+    <string name="difficulty">Difficulty:</string>
 </resources>
