added LevelSelection feature and removed ToggleMusic from Main, and fixed ToggleMusic in Settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="ok">Ok</string>
     <string name="settingsTitle"> SETTINGS</string>
     <string name="musicToggle">Toggle Music</string>
-    <string name="difficulty">Difficulty:</string>
+    <string name="difficulty">Level Difficulty:</string>
+    <string name="easyDifficulty">Easy</string>
+    <string name="mediumDifficulty">Medium</string>
 </resources>
