added 2 new levels that will start when the player collects all the pellets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="settingsLabel">Settings</string>
     <string name="resumeLabel">Resume</string>
     <string name="wonGame">YOU WON!</string>
-    <string name="keepPlaying">Press NEW GAME to play again</string>
+    <string name="keepPlaying">Press NEXT LEVEL to keep playing</string>
     <string name="gameOver">GAME OVER!</string>
     <string name="ok">Ok</string>
     <string name="settingsTitle"> SETTINGS</string>
@@ -27,4 +27,5 @@
     <string name="difficulty">Level Difficulty:</string>
     <string name="easyDifficulty">Easy</string>
     <string name="mediumDifficulty">Medium</string>
+    <string name="nextLevel">Next Level</string>
 </resources>
