--- a/M16_lab08.md
+++ b/M16_lab08.md
@@ -1,2 +1,16 @@
 ##1) Pause/Unpause button##
 https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/10
+
+##2) Center Gamemap ##
+https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/1
+
+##3) Fix Ghost AI ##
+https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/2
+
+##4) Difficulty button ##
+https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/14
+
+##5) Add test cases ##
+https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/8
+
+
