--- a/M16_lab08.md
+++ b/M16_lab08.md
@@ -13,4 +13,6 @@ https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/14
 ##5) Add test cases ##
 https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/8
 
+##6) Add more Ghosts && Refactor ##
+https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/15
 
