--- a/M16_lab08.md
+++ b/M16_lab08.md
@@ -7,7 +7,7 @@ https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/1
 ##3) Fix Ghost AI ##
 https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/2
 
-##4) Difficulty button ##
+##4) Difficulty button push##
 https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/14
 
 ##5) Add test cases ##
