--- a/M16_lab08.md
+++ b/M16_lab08.md
@@ -1,3 +1,6 @@
+Issues for the next generation of students
+###Cole Rogers, Kevin Chan
+
 ##1) Pause/Unpause button##
 https://github.com/UCSB-CS56-Projects/cs56-android-games-pacman/issues/10
 
