Updated for new workers on repo

--- a/F16_lab03.md
+++ b/F16_lab03.md
@@ -4,27 +4,21 @@ Miclos Lobins & Austin Dorotheo
 
 (b) As a user I can swipe the screen so that Pacman will move. As a user I can pause the game so that I can continue later on.
 
-(c) The software runs in the Android emulator. The player can play Pacman. The player can access the menus. However there are minor issues in the functionality
-and some features are missing.
+(c) The software runs in the Android emulator. The player can play Pacman. The player can access the menus. However there are minor issues in the functionality and some features are missing.
 
-(d) As a user I can see the mute button so that I can mute the game. As a user I can set different difficulties to make the game more or less challenging. As
-a user I can change the colors of game so that I can set things to my preference.
+(d) As a user I can see the mute button so that I can mute the game. As a user I can set different difficulties to make the game more or less challenging. As a user I can change the colors of game so that I can set things to my preference.
 
-(e) The README.md is very informative. The user stories list all issues and those that have been completed. However the current progress is ambiguous as to
-whether the points listed within have been completed or not.
+(e) The README.md is very informative. The user stories list all issues and those that have been completed. However the current progress is ambiguous as to whether the points listed within have been completed or not.
 
-(f) The build.xml file does not exist but a build.gradle does. This is because the project is on Android and not Java. The build.gradle does not hold any
-legacy JWS code.
+(f) The build.xml file does not exist but a build.gradle does. This is because the project is on Android and not Java. The build.gradle does not hold any legacy JWS code.
 
 (g) There are enough issues to pass the 1000 point requirement. The issues are clear in their requirements.
 
 (h) N/A
 
-(i) The code is organized. Each class handles one duty of the game. The code is well commented but they could be more clear on the purpose of each class
-and how each class interacts. However, some classes handle multiple responsibilities and could be broken up into smaller classes.
+(i) The code is organized. Each class handles one duty of the game. The code is well commented but they could be more clear on the purpose of each class and how each class interacts. However, some classes handle multiple responsibilities and could be broken up into smaller classes.
 I would inform the next programmer by describing each class and how it interacts with the others. I might also add a diagram to show the class relationships.
 
-(j) There are two test classes, ExampleUnitClass and ApplicationTest. ExampleUnitClass is empty and ApplicationTest checks if the game runs.
-There are no JUnit tests. The best way to test the game includes running the game and testing the conditions.
+(j) There are two test classes, ExampleUnitClass and ApplicationTest. ExampleUnitClass is empty and ApplicationTest checks if the game runs. There are no JUnit tests. The best way to test the game includes running the game and testing the conditions.
 
 
