--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PacmanAndroid</string>
     <string name="action_settings">Settings</string>
-    <string name ="resume">Resume</string>
+    <string name="resume">Resume</string>
     <string name="play">New Game</string>
     <string name="help">How To Play</string>
 
@@ -30,4 +30,7 @@
     <string name="hardDifficulty">Hard</string>
     <string name="expertDifficulty">Expert</string>
     <string name="nextLevel">Next Level</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
